crates/skills-lsp/tests/snapshots/lsp_manifest_diags__conflict.snap
---
source: crates/skills-lsp/tests/lsp_manifest_diags.rs
expression: simplify(&diags)
---
[
  {
    "code": "conflict",
    "message": "skill 'clash' is provided by more than one donor: dir/a-skills, dir/b-skills — `skills update` aborts until resolved (use skills[] allowlists)",
    "range": "0:0-0:1",
    "severity": "error"
  }
]
