crates/skills-lsp/tests/snapshots/lsp_manifest_diags__deprecated_remote.snap
---
source: crates/skills-lsp/tests/lsp_manifest_diags.rs
expression: simplify(&diags)
---
[
  {
    "code": "deprecated",
    "message": "'remote' was renamed to 'sources'; rename the key",
    "range": "1:12-3:3",
    "severity": "warning"
  },
  {
    "code": "not-fetched",
    "message": "acme/skills: not fetched yet — run `skills update`",
    "range": "2:4-2:67",
    "severity": "hint"
  }
]
