crates/skills-lsp/tests/snapshots/lsp_manifest_diags__parse_error.snap
---
source: crates/skills-lsp/tests/lsp_manifest_diags.rs
expression: simplify(&diags)
---
[
  {
    "code": "parse",
    "message": "skills.json: invalid type: integer `5`, expected a string at line 2 column 13",
    "range": "1:12-1:13",
    "severity": "error"
  }
]
