crates/skills-lsp/tests/snapshots/lsp_manifest_diags__semantic_errors.snap
---
source: crates/skills-lsp/tests/lsp_manifest_diags.rs
expression: simplify(&diags)
---
[
  {
    "code": "invalid",
    "message": "alias '.agents/skills' must not equal the target '.agents/skills'",
    "range": "2:14-2:30",
    "severity": "error"
  },
  {
    "code": "invalid",
    "message": "invalid trusted pattern 'bare': expected 'vendor/package' or 'vendor/*'",
    "range": "1:56-1:62",
    "severity": "error"
  }
]
